<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/title_and_log_buttons_layout"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/initial_title" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/login_button" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_button"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_info_layout"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="20dp" >

                <Button
                    android:id="@+id/refresh_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/refresh_button" />

                <TextView
                    android:id="@+id/user_data_section_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/user_data_section_heading" />

                <TextView
                    android:id="@+id/user_name_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_name_heading" />

                <TextView
                    android:id="@+id/user_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_given_name_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_given_name_heading" />

                <TextView
                    android:id="@+id/user_given_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_family_name_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_family_name_heading" />

                <TextView
                    android:id="@+id/user_family_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_nickname_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_nickname_heading" />

                <TextView
                    android:id="@+id/user_nickname_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_email_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_email_heading" />

                <TextView
                    android:id="@+id/user_email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_is_email_verified_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_is_email_verified_heading" />

                <TextView
                    android:id="@+id/user_is_email_verified_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_picture_URL_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_picture_URL_heading" />

                <TextView
                    android:id="@+id/user_picture_URL_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_created_at_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_created_at_heading" />

                <TextView
                    android:id="@+id/user_created_at_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_extra_info_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_extra_info_heading" />

                <TextView
                    android:id="@+id/user_extra_info_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/user_metadata_section_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/user_metadata_section_heading" />

                <TextView
                    android:id="@+id/user_metadata_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/user_metadata_heading" />

                <TextView
                    android:id="@+id/user_metadata_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/initial_display_value" />

                <TextView
                    android:id="@+id/metadata_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:text="@string/metadata_instructions" />

                <TextView
                    android:id="@+id/country_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/country_heading" />

                <EditText
                    android:id="@+id/country_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country_edittext_hint" />

                <TextView
                    android:id="@+id/favorite_color_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/favorite_color_heading" />

                <EditText
                    android:id="@+id/favorite_color_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/favorite_color_edittext_hint" />

                <Button
                    android:id="@+id/set_user_metadata_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_user_metadata_button" />

                <TextView
                    android:id="@+id/app_metadata_section_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/app_metadata_section_heading" />

                <TextView
                    android:id="@+id/app_metadata_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:text="@string/app_metadata_heading" />

                <TextView
                    android:id="@+id/app_metadata_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/initial_display_value" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>